fix js & public template extraction

--- a/src/Wenwen/FrontendBundle/Resources/views/Advertisement/game.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/Advertisement/game.html.twig
@@ -18,7 +18,7 @@
 		<iframe frameborder="0" width="1000" height="3500" scrolling="no" src="http://sugoroku01.cn.pag-asia.com/index.php?point_uid=96&nickname=clauzu&key=51ebb3b41f89310ad9827a03170be3a41fb69082"></iframe> 
 	</div>
 </div>
-<script type="text/javascript" src="{{ asset('js/lib/require.js')}}" defer async="true" data-main="{{ asset('js/advertisement/game')}}"></script>
+<script type="text/javascript" src="{{ asset('js/lib/require.js')}}" defer async="true" data-main="{{ asset('js/app/advertisement/game')}}"></script>
 {% endblock %}
 
 {% block footer %}
