--- a/src/Wenwen/FrontendBundle/Resources/views/Personal/exchangeHistory.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/Personal/exchangeHistory.html.twig
@@ -15,81 +15,72 @@
 {% block body %}
 <div class="main">
 	<div class="main-personal w1000 clearfix">
-			<div class="main-personal-left left">
-				<h1>个人中心</h1>
-				<ul>
-					<li><a href="{{ path('wenwen_frontend_personal_profile') }}"><em></em>个人资料</a></li>
-					<li><a href="{{ path('wenwen_frontend_personal_message') }}"><em class="icon2"></em>我的消息</a></li>
-					<li><a href="{{ path('wenwen_frontend_personal_task') }}"><em class="icon3"></em>任务历史</a></li>
-					<li class="active"><a href="{{ path('wenwen_frontend_personal_exchange') }}"><em class="icon4"></em>兑换历史</a></li>
-					<li><a href="{{ path('wenwen_frontend_personal_account') }}"><em class="icon5"></em>账户设置</a></li>
-				</ul>
-			</div>
-			<div class="main-personal-right right">
-				<h2><div class="filter"><label for="">按时间筛选：</label><input type="text" class="laydate-icon">到<input type="text" class="laydate-icon"><span class="searchBtn">搜索</span></div>兑换历史</h2>
-				<div class="main-personal-points">
-					<table>
-						<thead>
-							<tr>
-								<th>申请日期</th>
-								<th>兑换内容</th>
-								<th>兑换积分</th>
-								<th>状态</th>
-							</tr>
-						</thead>
-						<tbody>
-							<tr>
-								<td>2015-07-10</td>
-								<td>支付宝-50元</td>
-								<td>5000</td>
-								<td>待审核</td>
-							</tr>
-							<tr>
-								<td>2015-07-10</td>
-								<td>手机费-20元</td>
-								<td>2010</td>
-								<td>成功</td>
-							</tr>
-							<tr>
-								<td>2015-07-10</td>
-								<td>手机费-50元</td>
-								<td>4960</td>
-								<td>成功</td>
-							</tr>
-							<tr>
-								<td>2015-07-10</td>
-								<td>手机流量-50M</td>
-								<td>1590</td>
-								<td>成功</td>
-							</tr>
-							<tr>
-								<td>2015-07-10</td>
-								<td>支付宝-50元</td>
-								<td>5000</td>
-								<td>失败</td>
-							</tr>
-							<tr>
-								<td>2015-07-10</td>
-								<td>支付宝-50元</td>
-								<td>5000</td>
-								<td>成功</td>
-							</tr>
-						</tbody>
-					</table>
-					<div class="page-wrapper">
-						<p class="page">
-							<span class="active">1</span>
-							<span>2</span>
-							<span>3</span>
-							<span>4</span>
-							<span>5</span>
-							<span>6</span>
-							<span>尾页</span>
-						</p>
-					</div>
+		{% include 'WenwenFrontendBundle:Personal:_leftSideBar.html.twig' %} 
+		<div class="main-personal-right right">
+			<h2><div class="filter"><label for="">按时间筛选：</label><input type="text" class="laydate-icon">到<input type="text" class="laydate-icon"><span class="searchBtn">搜索</span></div>兑换历史</h2>
+			<div class="main-personal-points">
+				<table>
+					<thead>
+						<tr>
+							<th>申请日期</th>
+							<th>兑换内容</th>
+							<th>兑换积分</th>
+							<th>状态</th>
+						</tr>
+					</thead>
+					<tbody>
+						<tr>
+							<td>2015-07-10</td>
+							<td>支付宝-50元</td>
+							<td>5000</td>
+							<td>待审核</td>
+						</tr>
+						<tr>
+							<td>2015-07-10</td>
+							<td>手机费-20元</td>
+							<td>2010</td>
+							<td>成功</td>
+						</tr>
+						<tr>
+							<td>2015-07-10</td>
+							<td>手机费-50元</td>
+							<td>4960</td>
+							<td>成功</td>
+						</tr>
+						<tr>
+							<td>2015-07-10</td>
+							<td>手机流量-50M</td>
+							<td>1590</td>
+							<td>成功</td>
+						</tr>
+						<tr>
+							<td>2015-07-10</td>
+							<td>支付宝-50元</td>
+							<td>5000</td>
+							<td>失败</td>
+						</tr>
+						<tr>
+							<td>2015-07-10</td>
+							<td>支付宝-50元</td>
+							<td>5000</td>
+							<td>成功</td>
+						</tr>
+					</tbody>
+				</table>
+				<div class="page-wrapper">
+					<p class="page">
+						<span class="active">1</span>
+						<span>2</span>
+						<span>3</span>
+						<span>4</span>
+						<span>5</span>
+						<span>6</span>
+						<span>尾页</span>
+					</p>
 				</div>
 			</div>
 		</div>
+	</div>
 </div>
 <script type="text/javascript" src="{{ asset('js/lib/require.js')}}" defer async="true" data-main="{{ asset('js/app/personal/point')}}"></script>
 {% endblock %}
