depart help center, timeline, vote, globe css...

--- a/src/Wenwen/FrontendBundle/Resources/views/Help/index.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/Help/index.html.twig
@@ -18,8 +18,7 @@
 	<div class="main-help-con w1000 clearfix">
 		<div class="helpL left">
 	        <ul class="tabNav">
-				<li class="active">新手上路</li>
-	            <li>账号类</li>
+	            <li class="active">账号类</li>
 	            <li>问卷类</li>
 	            <li>积分兑换</li>
 				<li>应用程序</li>
@@ -31,56 +30,7 @@
 	    </div>
 	    <div class="helpR tabCon right">
 	    	<h2 class="first">新手上路</h2>
-	        <ul class="newGuide con clearfix">
-	        	<li>
-	            	<em><img src="{{ asset('img/help/icon01.png') }}" width="98" height="75"/></em>
-	                <dl>
-	                    <dt>问卷调查</dt>
-	                    <dd>选择喜欢的商家进入，购买商品就能返利哦！</dd>
-	                    <dd><a href="newGuide#survey" class="more">快去了解</a></dd>
-	                </dl>
-	            </li>
-	            <li>
-	            	<em><img src="{{ asset('img/help/icon02.png') }}" width="98" height="75"/></em>
-	                <dl>
-	                    <dt>快速问答</dt>
-	                    <dd>玩玩小游戏、做做问卷，米粒轻松到手！</dd>
-	                    <dd><a href="newGuide#vote" class="more">快去了解</a></dd>
-	                </dl>
-	            </li>
-	            <li>
-	            	<em><img src="{{ asset('img/help/icon03.png') }}" width="98" height="75"/></em>
-	                <dl>
-	                    <dt>购物返利</dt>
-	                    <dd>为您推荐最实惠的商家！为您寻找最实惠的活动！</dd>
-	                    <dd><a href="newGuide#shop" class="more">快去了解</a></dd>
-	                </dl>
-	            </li>
-	            <li>
-	            	<em><img src="{{ asset('img/help/icon04.png') }}" width="98" height="75"/></em>
-	                <dl>
-	                    <dt>广告体验</dt>
-	                    <dd>为您推荐最实惠的商家！为您寻找最实惠的活动！</dd>
-	                    <dd><a href="newGuide#advertisement" class="more">快去了解</a></dd>
-	                </dl>
-	            </li>
-	            <li>
-	            	<em><img src="{{ asset('img/help/icon05.png') }}" width="98" height="75"/></em>
-	                <dl>
-	                    <dt>游戏体验</dt>
-	                    <dd>每天摇色子，每周统计排名，第一名更有5888米粒奖励！</dd>
-	                    <dd><a href="newGuide#game" class="more">快去了解</a></dd>
-	                </dl>
-	            </li>
-	            <li>
-	            	<em><img src="{{ asset('img/help/icon06.png') }}" width="98" height="75"/></em>
-	                <dl>
-	                    <dt>邀请好友</dt>
-	                    <dd>为您推荐最实惠的商家！为您寻找最实惠的活动！</dd>
-	                    <dd><a href="newGuide#invitation" class="more">快去了解</a></dd>
-	                </dl>
-	            </li>
-	        </ul>
+	        
 	        <ul class="con">
 	        	<li>
 	            	<div class="title"><em>1</em><span>如何获得返利</span><span class="icons"></span></div>
