--- a/src/Wenwen/FrontendBundle/Resources/views/Home/index.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/Home/index.html.twig
@@ -81,6 +81,13 @@
 			</div>
 		</div>
 	</div>
+	<div class="main-con main-con-action">
+		<div class="w1000">
+			<h1>马上开启91问问之旅，加入小伙伴们赚钱的队伍中来吧！</h1>
+			<p>点击以下按钮完成5秒注册</p>
+			<a href="#" class="button">现在注册</a>
+		</div>
+	</div>
 </div>
 <script type="text/javascript" src="{{ asset('js/lib/require.js')}}" defer async="true" data-main="{{ asset('js/app/index')}}"></script>
 {% endblock %}
