--- a/src/Wenwen/FrontendBundle/Resources/views/Vote/result.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/Vote/result.html.twig
@@ -21,10 +21,10 @@
 					<div class="relate">
 						<img src="{{ asset('img/temp/qsurveyImg.jpg') }}" alt="">
 						<div class="relate-text">
-							<div>时间：08/04 ~ 08/08<br>该题由热心用户：<b>新神</b> 提供，恭喜他获得了<b>200</b>积分！</div>
+							<div>时间：08/04 ~ 08/08</div>
 							<div class="description">
 								<b class="btn"></b>
-								<p class="">随着网络的普及，视频播放器已成为每个人的手机或电脑的必备软件视频播放器已成为每个人的手机或电脑的必备软件视频播放器已成为每个人的手机或电脑的必备软件视频播放器已成为每个人的手机或电脑的必备软件，那么您平时最喜欢使用视频播放器已成为每个人的手机或电脑的必备软件，那么您平时最喜欢使用</p>
+								<p class="">该题由热心用户：<b>新神</b> 提供，恭喜他获得了<b>200</b>积分！随着网络的普及，视频播放器已成为每个人的手机或电脑的必备软件视频播放器已成为每个人的手机或电脑的必备软件视频播放器已成为每个人的手机或电脑的必备软件视频播放器已成为每个人的手机或电脑的必备软件，那么您平时最喜欢使用视频播放器已成为每个人的手机或电脑的必备软件，那么您平时最喜欢使用</p>
 							</div>
 						</div>
 					</div>
@@ -113,48 +113,38 @@
 			<div class="main-con-right right">
 				<div><a href="{{ path('wenwen_frontend_vote_suggest') }}"><img src="{{ asset('img/vote/prize.jpg') }}" alt=""></a></div>
 				<div class="exchange-dynamics">
-					<h2>兑换动态</h2>
+					<h2>最新动态</h2>
 					<div class="mask">
 						<ul>
 							<li>
-								<p>1秋水无**  将1000米粒兑换成手机话费</p>
-								<div class="date">1分钟前</div>
+								<p>lyx**  回答调查问卷获得10积分</p>
 							</li>
 							<li>
-								<p>秋水无**  将1000米粒兑换成手机流量</p>
-								<div class="date">1分钟前</div>
+								<p>秋水无**  快速问答投票获得1积分</p>
 							</li>
 							<li>
-								<p>秋水无**  将1000米粒兑换成支付宝现金</p>
-								<div class="date">1分钟前</div>
+								<p>程显**  体验广告获得300积分</p>
 							</li>
 							<li>
-								<p>秋水无**  将1000米粒兑换成支付宝现金</p>
-								<div class="date">1分钟前</div>
+								<p>连童**  兑换了手机充值2010积分</p>
 							</li>
 							<li>
-								<p>秋水无**  将1000米粒兑换成支付宝现金</p>
-								<div class="date">1分钟前</div>
+								<p>niuniu**  兑换了上网流量包1850积分</p>
 							</li>
 							<li>
-								<p>秋水无**  将1000米粒兑换成手机话费</p>
-								<div class="date">1分钟前</div>
+								<p>妞**  兑换了支付宝现金3221积分</p>
 							</li>
 							<li>
-								<p>秋水无**  将1000米粒兑换成手机流量</p>
-								<div class="date">1分钟前</div>
+								<p>xyj**  兑换了上网流量包1850积分</p>
 							</li>
 							<li>
-								<p>秋水无**  将1000米粒兑换成支付宝现金</p>
-								<div class="date">1分钟前</div>
+								<p>永辉**  兑换了手机充值2010积分</p>
 							</li>
 							<li>
-								<p>秋水无**  将1000米粒兑换成支付宝现金</p>
-								<div class="date">1分钟前</div>
+								<p>仙霞**  兑换了支付宝现金3221积分</p>
 							</li>
 							<li>
-								<p>9秋水无**  将1000米粒兑换成支付宝现金</p>
-								<div class="date">1分钟前</div>
+								<p>xyj**  兑换了上网流量包1850积分</p>
 							</li>
 						</ul>
 					</div>
