--- a/web/css/layout/common.css
+++ b/web/css/layout/common.css
@@ -1,70 +1,55 @@
 .w1000 {
   width: 1000px;
-  margin: 0 auto;
-}
+  margin: 0 auto; }
 
 .left {
-  float: left;
-}
+  float: left; }
 
 .right {
-  float: right;
-}
+  float: right; }
 
 .hide {
-  display: none;
-}
+  display: none; }
 
 body {
   font-family: "Microsoft YaHei", Tohoma, Arial;
   font-size: 12px;
-  background: #f5f5f7;
-  color: #333;
-}
+  background: #f2f3f5;
+  color: #333; }
 
 .main {
-  margin-top: 111px;
-}
-.main.unlogin {
-  margin-top: 81px;
-}
+  margin-top: 111px; }
+  .main.unlogin {
+    margin-top: 81px; }
 
 .main-con-left > div, .main-con-right > div {
   margin-top: 20px;
   background: #fff;
-  border: 1px solid #eee;
-}
+  border: 1px solid #ebedf2; }
 
 .main-con-left > div {
-  padding: 10px 25px;
-}
+  padding: 10px 25px; }
 
 .main-con-left {
-  width: 75%;
-}
+  width: 75%; }
 
 .main-con-right {
-  width: 23%;
-}
-.main-con-right h2 {
-  padding: 0 15px;
-  line-height: 35px;
-  color: #000;
-  font-size: 14px;
-  font-weight: bold;
-  border-bottom: 1px solid #f6f6f6;
-}
-.main-con-right .weibo {
-  height: 550px;
-  overflow: hidden;
-}
+  width: 23%; }
+  .main-con-right h2 {
+    padding: 0 15px;
+    line-height: 35px;
+    color: #000;
+    font-size: 14px;
+    font-weight: bold;
+    border-bottom: 1px solid #f6f6f6; }
+  .main-con-right .weibo {
+    height: 550px;
+    overflow: hidden; }
 
 .clearfix {
-  zoom: 1;
-}
+  zoom: 1; }
 
 .clearfix:after {
   content: "";
   display: table;
-  clear: both;
-}
+  clear: both; }
