--- a/web/sass/layout/global.scss
+++ b/web/sass/layout/global.scss
@@ -4,14 +4,14 @@ $font-color: #333;
 $font-size: 12px;
 $font-family: "Microsoft YaHei", Tohoma, Arial;
 
-$bg-body-color: #f5f5f7;
+$bg-body-color: #f2f3f5;
 $bg-body-color2: #fff;
 
 $page-width: 1000px;
 
 $block-bg-color: #fff;
 $block-line-color: #f6f6f6;
-$block-border: 1px solid #eee;
+$block-border: 1px solid #ebedf2;
 $block-inner-border: 1px solid #f6f6f6;
 
 $main-color: #ff6700;
@@ -25,7 +25,7 @@ $normal-color: #898989;
 $normal-bg-color: #fafafa;
 $normal-border: 1px solid #e7e7e7;
 
-$input-border: 1px solid #eee;
+$input-border: 1px solid #ebedf2;
 $input-border-focus: 1px solid #3bc570;
 $input-border-error: 1px solid #ff0000;
 
