--- a/web/css/component/login.css
+++ b/web/css/component/login.css
@@ -4,8 +4,7 @@
   right: -70px;
   top: 50px;
   background: url(../img/home/loginBg.png) no-repeat center bottom;
-  padding: 0 70px 5px;
-}
+  padding: 0 70px 5px; }
 
 .login {
   width: 405px;
@@ -14,190 +13,160 @@
   font-size: 16px;
   background: #efeff4;
   border-radius: 5px;
-  overflow: hidden;
-}
-.login .login-con {
-  padding: 30px 38px;
-}
-.login .login-con p {
-  font-size: 12px;
-}
-.login h2 {
-  height: 64px;
-  line-height: 64px;
-  color: #fff;
-  font-size: 24px;
-  background: #313035;
-  padding: 0 38px;
-}
-.login li {
-  margin-bottom: 15px;
-  position: relative;
-  z-index: 1;
-}
-.login li img {
-  vertical-align: middle;
-}
-.login li span {
-  vertical-align: middle;
-  display: none;
-}
-.login li span.authcodeInput {
-  display: inline-block;
-  *display: inline;
-  *zoom: 1;
-}
-.login li span .change {
-  height: 13px;
-  font-size: 12px;
-  padding: 0  10px 0 25px;
-  margin: 10px 0 0 10px;
-  cursor: pointer;
-  background: url(../img/home/change.png) 0 0 no-repeat;
-}
-.login li span .change:hover {
-  color: #6f93da;
-  background: url(../img/home/change.png) 0 -13px no-repeat;
-}
-.login li span.succeed {
-  color: #3bc570;
-  display: inline-block;
-  *display: inline;
-  *zoom: 1;
-  background: url(../img/user/succeedIcon.png) no-repeat 2px 5px;
-  font-size: 0;
-}
-.login li span.focus {
-  border: 1px solid #e7e7e7;
-  background: #fafafa;
-  color: #898989;
-  vertical-align: top;
-}
-.login li span.error, .login li span strong {
-  position: absolute;
-  z-index: 1000;
-  right: 0;
-  top: 0;
-  color: #c80000;
-  background: #fff;
-  font-size: 12px;
-  height: 32px;
-  line-height: 32px;
-  padding: 0 10px;
-  border: 1px solid #c80000;
-  border-radius: 3px;
-  display: inline-block;
-  *display: inline;
-  *zoom: 1;
-  vertical-align: top;
-}
-.login li span.fade {
-  display: none;
-}
-.login li label {
-  width: 65px;
-  line-height: 35px;
-  color: #525e78;
-  display: inline-block;
-  *display: inline;
-  *zoom: 1;
-  vertical-align: middle;
-}
-.login li input {
-  width: 252px;
-  height: 32px;
-  line-height: 30px;
-  padding: 0 5px;
-  color: #555;
-  font-size: 14px;
-  border: 1px solid #e4e4eb;
-  background: #fff;
-  outline: none;
-  border-radius: 3px;
-  transition: all 0.3s;
-  -moz-transition: all 0.3s;
-  -webkit-transition: all 0.3s;
-  -o-transition: all 0.3s;
-  vertical-align: middle;
-}
-.login li input:focus, .login li input.active {
-  border: 1px solid #3bc570;
-  box-shadow: 0 0 5px #3bc570;
-}
-.login li input#authcode {
-  width: 90px;
-  margin-left: 10px;
-}
-.login .login-btn {
-  margin-top: 30px;
-  width: 100%;
-  height: 40px;
-  line-height: 40px;
-  color: #fff;
-  font-size: 21px;
-  background: #1566d6;
-  border: 1px solid #1566d6;
-  border-radius: 5px;
-  text-align: center;
-  cursor: pointer;
-  transition: all 0.4s;
-  -moz-transition: all 0.4s;
-  -webkit-transition: all 0.4s;
-  -o-transition: all 0.4s;
-}
-.login .login-btn:hover {
-  background: #145dc4;
-  border: 1px solid #145dc4;
-}
-.login .login-btn a {
-  color: #fff;
-}
-.login p {
-  line-height: 55px;
-}
-.login p a {
-  color: #1566d6;
-}
-.login p a.spec {
-  color: #757982;
-}
-.login .login-btn-others {
-  margin-top: 20px;
-}
-.login .login-btn-others span {
-  margin-left: -10px;
-}
-.login .login-btn-others a {
-  margin-left: 10px;
-  padding-left: 36px;
-  width: 123px;
-  height: 40px;
-  line-height: 40px;
-  text-align: center;
-  color: #a3a3a3;
-  font-size: 14px;
-  background: #fff url(../img/home/sinaUnact.png) no-repeat 32px 12px;
-  display: inline-block;
-  *display: inline;
-  *zoom: 1;
-  border-radius: 5px;
-}
-.login .login-btn-others a:hover {
-  background: #fff url(../img/home/sina.png) no-repeat 32px 12px;
-  color: #ff7f58;
-  transition: all 0.5s;
-  -moz-transition: all 0.5s;
-  -webkit-transition: all 0.5s;
-  -o-transition: all 0.5s;
-}
-.login .login-btn-others a.qq-login {
-  background: #fff url(../img/home/qqUnact.png) no-repeat 38px 11px;
-}
-.login .login-btn-others a.qq-login:hover {
-  background: #fff url(../img/home/qq.png) no-repeat 38px 11px;
-  color: #6f93da;
-  transition: all 0.5s;
-  -moz-transition: all 0.5s;
-  -webkit-transition: all 0.5s;
-  -o-transition: all 0.5s;
-}
+  overflow: hidden; }
+  .login .login-con {
+    padding: 30px 38px; }
+    .login .login-con p {
+      font-size: 12px; }
+  .login h2 {
+    height: 64px;
+    line-height: 64px;
+    color: #fff;
+    font-size: 24px;
+    background: #313035;
+    padding: 0 38px; }
+  .login li {
+    margin-bottom: 15px;
+    position: relative;
+    z-index: 1; }
+    .login li img {
+      vertical-align: middle; }
+    .login li span {
+      vertical-align: middle;
+      display: none; }
+      .login li span.authcodeInput {
+        display: inline-block;
+        *display: inline;
+        *zoom: 1; }
+      .login li span .change {
+        height: 13px;
+        font-size: 12px;
+        padding: 0  10px 0 25px;
+        margin: 10px 0 0 10px;
+        cursor: pointer;
+        background: url(../img/home/change.png) 0 0 no-repeat; }
+        .login li span .change:hover {
+          color: #6f93da;
+          background: url(../img/home/change.png) 0 -13px no-repeat; }
+      .login li span.succeed {
+        color: #3bc570;
+        display: inline-block;
+        *display: inline;
+        *zoom: 1;
+        background: url(../img/user/succeedIcon.png) no-repeat 2px 5px;
+        font-size: 0; }
+      .login li span.focus {
+        border: 1px solid #e7e7e7;
+        background: #fafafa;
+        color: #898989;
+        vertical-align: top; }
+      .login li span.error, .login li span strong {
+        position: absolute;
+        z-index: 1000;
+        right: 0;
+        top: 0;
+        color: #c80000;
+        background: #fff;
+        font-size: 12px;
+        height: 32px;
+        line-height: 32px;
+        padding: 0 10px;
+        border: 1px solid #c80000;
+        border-radius: 3px;
+        display: inline-block;
+        *display: inline;
+        *zoom: 1;
+        vertical-align: top; }
+      .login li span.fade {
+        display: none; }
+    .login li label {
+      width: 65px;
+      line-height: 35px;
+      color: #525e78;
+      display: inline-block;
+      *display: inline;
+      *zoom: 1;
+      vertical-align: middle; }
+    .login li input {
+      width: 252px;
+      height: 32px;
+      line-height: 30px;
+      padding: 0 5px;
+      color: #555;
+      font-size: 14px;
+      border: 1px solid #e4e4eb;
+      background: #fff;
+      outline: none;
+      border-radius: 3px;
+      transition: all 0.3s;
+      -moz-transition: all 0.3s;
+      -webkit-transition: all 0.3s;
+      -o-transition: all 0.3s;
+      vertical-align: middle; }
+      .login li input:focus, .login li input.active {
+        border: 1px solid #3bc570;
+        box-shadow: 0 0 5px #3bc570; }
+      .login li input#authcode {
+        width: 90px;
+        margin-left: 10px; }
+  .login .login-btn {
+    margin-top: 30px;
+    width: 100%;
+    height: 40px;
+    line-height: 40px;
+    color: #fff;
+    font-size: 21px;
+    background: #1566d6;
+    border: 1px solid #1566d6;
+    border-radius: 5px;
+    text-align: center;
+    cursor: pointer;
+    transition: all 0.4s;
+    -moz-transition: all 0.4s;
+    -webkit-transition: all 0.4s;
+    -o-transition: all 0.4s; }
+    .login .login-btn:hover {
+      background: #145dc4;
+      border: 1px solid #145dc4; }
+    .login .login-btn a {
+      color: #fff; }
+  .login p {
+    line-height: 55px; }
+    .login p a {
+      color: #1566d6; }
+      .login p a.spec {
+        color: #757982; }
+  .login .login-btn-others {
+    margin-top: 20px; }
+    .login .login-btn-others span {
+      margin-left: -10px; }
+    .login .login-btn-others a {
+      margin-left: 10px;
+      padding-left: 36px;
+      width: 123px;
+      height: 40px;
+      line-height: 40px;
+      text-align: center;
+      color: #a3a3a3;
+      font-size: 14px;
+      background: #fff url(../img/home/sinaUnact.png) no-repeat 32px 12px;
+      display: inline-block;
+      *display: inline;
+      *zoom: 1;
+      border-radius: 5px; }
+      .login .login-btn-others a:hover {
+        background: #fff url(../img/home/sina.png) no-repeat 32px 12px;
+        color: #ff7f58;
+        transition: all 0.5s;
+        -moz-transition: all 0.5s;
+        -webkit-transition: all 0.5s;
+        -o-transition: all 0.5s; }
+      .login .login-btn-others a.qq-login {
+        background: #fff url(../img/home/qqUnact.png) no-repeat 38px 11px; }
+        .login .login-btn-others a.qq-login:hover {
+          background: #fff url(../img/home/qq.png) no-repeat 38px 11px;
+          color: #6f93da;
+          transition: all 0.5s;
+          -moz-transition: all 0.5s;
+          -webkit-transition: all 0.5s;
+          -o-transition: all 0.5s; }
