--- a/web/css/exchangeFlow.css
+++ b/web/css/exchangeFlow.css
@@ -14,7 +14,7 @@
 body {
   font-family: "Microsoft YaHei", Tohoma, Arial;
   font-size: 12px;
-  background: #f5f5f7;
+  background: #f2f3f5;
   color: #333; }
 
 .main {
@@ -25,7 +25,7 @@ body {
 .main-con-left > div, .main-con-right > div {
   margin-top: 20px;
   background: #fff;
-  border: 1px solid #eee; }
+  border: 1px solid #ebedf2; }
 
 .main-con-left > div {
   padding: 10px 25px; }
@@ -85,12 +85,12 @@ body {
 
 .header-top {
   background: #36363c;
-  color: #9a9a9b;
+  color: #7e858f;
   height: 30px;
   line-height: 30px;
   border-bottom: 1px solid #bcbdc2; }
   .header-top a {
-    color: #9a9a9b;
+    color: #7e858f;
     font-size: 12px; }
     .header-top a:hover {
       color: #fff; }
@@ -164,7 +164,7 @@ body {
     border-width: 5px;
     cursor: pointer;
     border-style: solid dashed dashed dashed;
-    border-color: #9a9a9b transparent transparent transparent;
+    border-color: #7e858f transparent transparent transparent;
     border-bottom: none;
     transition: transform .1s ease-in 0s;
     -webkit-transition: -webkit-transform .1s ease-in 0s; }
@@ -176,13 +176,13 @@ body {
   z-index: 9999;
   top: 30px;
   right: 0;
-  border: 1px solid #eee;
+  border: 1px solid #ebedf2;
   background: #fff;
   width: 186px;
   display: none; }
   .header-top-con .personal li {
     float: none;
-    border-top: 1px solid #eee;
+    border-top: 1px solid #ebedf2;
     line-height: 35px;
     padding: 0 20px; }
     .header-top-con .personal li a {
@@ -384,7 +384,7 @@ body {
 
 .main-con-exchange {
   background: #fff;
-  border: 1px solid #eee; }
+  border: 1px solid #ebedf2; }
   .main-con-exchange h1 {
     margin-top: 30px;
     padding-left: 30px;
@@ -590,10 +590,10 @@ body {
 
 .footer {
   margin-top: 50px;
-  border-top: 3px solid #bebebe;
+  border-top: 3px solid #d6d9df;
   padding: 30px 0;
   line-height: 24px;
-  background: #f8f8f8;
+  background: #edeff2;
   color: #535353; }
   .footer .footer-nav-group {
     float: left;
