--- a/web/css/shopDetail.css
+++ b/web/css/shopDetail.css
@@ -1,73 +1,58 @@
 .w1000 {
   width: 1000px;
-  margin: 0 auto;
-}
+  margin: 0 auto; }
 
 .left {
-  float: left;
-}
+  float: left; }
 
 .right {
-  float: right;
-}
+  float: right; }
 
 .hide {
-  display: none;
-}
+  display: none; }
 
 body {
   font-family: "Microsoft YaHei", Tohoma, Arial;
   font-size: 12px;
-  background: #f5f5f7;
-  color: #333;
-}
+  background: #f2f3f5;
+  color: #333; }
 
 .main {
-  margin-top: 111px;
-}
-.main.unlogin {
-  margin-top: 81px;
-}
+  margin-top: 111px; }
+  .main.unlogin {
+    margin-top: 81px; }
 
 .main-con-left > div, .main-con-right > div {
   margin-top: 20px;
   background: #fff;
-  border: 1px solid #eee;
-}
+  border: 1px solid #ebedf2; }
 
 .main-con-left > div {
-  padding: 10px 25px;
-}
+  padding: 10px 25px; }
 
 .main-con-left {
-  width: 75%;
-}
+  width: 75%; }
 
 .main-con-right {
-  width: 23%;
-}
-.main-con-right h2 {
-  padding: 0 15px;
-  line-height: 35px;
-  color: #000;
-  font-size: 14px;
-  font-weight: bold;
-  border-bottom: 1px solid #f6f6f6;
-}
-.main-con-right .weibo {
-  height: 550px;
-  overflow: hidden;
-}
+  width: 23%; }
+  .main-con-right h2 {
+    padding: 0 15px;
+    line-height: 35px;
+    color: #000;
+    font-size: 14px;
+    font-weight: bold;
+    border-bottom: 1px solid #f6f6f6; }
+  .main-con-right .weibo {
+    height: 550px;
+    overflow: hidden; }
 
 .clearfix, .main-con-shopDetail {
-  zoom: 1;
-}
+  zoom: 1; }
 
 .clearfix:after, .main-con-shopDetail:after {
   content: "";
   display: table;
-  clear: both;
-}
+  clear: both; }
 
 .header {
   position: fixed;
@@ -76,63 +61,51 @@ body {
   left: 0;
   right: 0;
   height: 110px;
-  box-shadow: 0px 1px 5px #d8d8d8;
-}
-.header li {
-  float: left;
-}
-.header.header-show {
-  -webkit-transform: translateY(0%);
-  -ms-transform: translateY(0%);
-  transform: translateY(0%);
-  -webkit-transition: all 500ms cubic-bezier(0.19, 1, 0.22, 1);
-  -moz-transition: all 500ms cubic-bezier(0.19, 1, 0.22, 1);
-  -o-transition: all 500ms cubic-bezier(0.19, 1, 0.22, 1);
-  transition: all 500ms cubic-bezier(0.19, 1, 0.22, 1);
-}
-.header.header-hide {
-  -webkit-transform: translateY(-100%);
-  -ms-transform: translateY(-100%);
-  transform: translateY(-100%);
-  -webkit-transition: all 300ms cubic-bezier(0.55, 0.055, 0.675, 0.19);
-  -moz-transition: all 300ms cubic-bezier(0.55, 0.055, 0.675, 0.19);
-  -o-transition: all 300ms cubic-bezier(0.55, 0.055, 0.675, 0.19);
-  transition: all 300ms cubic-bezier(0.55, 0.055, 0.675, 0.19);
-}
-.header.unlogin {
-  height: 80px;
-}
+  box-shadow: 0px 1px 5px #d8d8d8; }
+  .header li {
+    float: left; }
+  .header.header-show {
+    -webkit-transform: translateY(0%);
+    -ms-transform: translateY(0%);
+    transform: translateY(0%);
+    -webkit-transition: all 500ms cubic-bezier(0.19, 1, 0.22, 1);
+    -moz-transition: all 500ms cubic-bezier(0.19, 1, 0.22, 1);
+    -o-transition: all 500ms cubic-bezier(0.19, 1, 0.22, 1);
+    transition: all 500ms cubic-bezier(0.19, 1, 0.22, 1); }
+  .header.header-hide {
+    -webkit-transform: translateY(-100%);
+    -ms-transform: translateY(-100%);
+    transform: translateY(-100%);
+    -webkit-transition: all 300ms cubic-bezier(0.55, 0.055, 0.675, 0.19);
+    -moz-transition: all 300ms cubic-bezier(0.55, 0.055, 0.675, 0.19);
+    -o-transition: all 300ms cubic-bezier(0.55, 0.055, 0.675, 0.19);
+    transition: all 300ms cubic-bezier(0.55, 0.055, 0.675, 0.19); }
+  .header.unlogin {
+    height: 80px; }
 
 .header-top {
   background: #36363c;
-  color: #9a9a9b;
+  color: #7e858f;
   height: 30px;
   line-height: 30px;
-  border-bottom: 1px solid #bcbdc2;
-}
-.header-top a {
-  color: #9a9a9b;
-  font-size: 12px;
-}
-.header-top a:hover {
-  color: #fff;
-}
-.header-top a.mailLink {
-  display: inline-block;
-  *display: inline;
-  *zoom: 1;
-}
+  border-bottom: 1px solid #bcbdc2; }
+  .header-top a {
+    color: #7e858f;
+    font-size: 12px; }
+    .header-top a:hover {
+      color: #fff; }
+    .header-top a.mailLink {
+      display: inline-block;
+      *display: inline;
+      *zoom: 1; }
 
 .header-top-con a {
   padding: 0 15px;
-  border-right: 1px solid #77777a;
-}
-.header-top-con a.first {
-  padding-left: 0;
-}
-.header-top-con a.last {
-  border-right: none;
-}
+  border-right: 1px solid #77777a; }
+  .header-top-con a.first {
+    padding-left: 0; }
+  .header-top-con a.last {
+    border-right: none; }
 .header-top-con em {
   width: 20px;
   height: 15px;
@@ -143,247 +116,205 @@ body {
   vertical-align: middle;
   display: inline-block;
   *display: inline;
-  *zoom: 1;
-}
-.header-top-con em.tool {
-  width: 12px;
-  height: 16px;
-  line-height: 16px;
-  background-position: 0 -38px;
-}
-.header-top-con em.mail {
-  margin-top: 1px;
-  margin-left: 0;
-  background-position: 0 -20px;
-  position: relative;
-  z-index: 1;
-  cursor: pointer;
-  *margin-top: 8px;
-}
-.header-top-con em .mark {
-  position: absolute;
-  z-index: 1000;
-  top: -3px;
-  right: -3px;
-  width: 7px;
-  height: 7px;
-  border-radius: 50%;
-  background: url(../img/common/icons_common.png) no-repeat 0 -58px;
-}
+  *zoom: 1; }
+  .header-top-con em.tool {
+    width: 12px;
+    height: 16px;
+    line-height: 16px;
+    background-position: 0 -38px; }
+  .header-top-con em.mail {
+    margin-top: 1px;
+    margin-left: 0;
+    background-position: 0 -20px;
+    position: relative;
+    z-index: 1;
+    cursor: pointer;
+    *margin-top: 8px; }
+  .header-top-con em .mark {
+    position: absolute;
+    z-index: 1000;
+    top: -3px;
+    right: -3px;
+    width: 7px;
+    height: 7px;
+    border-radius: 50%;
+    background: url(../img/common/icons_common.png) no-repeat 0 -58px; }
 .header-top-con span {
-  vertical-align: top;
-}
-.header-top-con span.special {
-  color: #fff;
-  position: relative;
-  z-index: 10;
-  display: inline-block;
-  *display: inline;
-  *zoom: 1;
-}
-.header-top-con span .expand-title {
-  padding: 1px 20px 1px 0;
-}
-.header-top-con span b {
-  position: absolute;
-  z-index: 1000;
-  top: 14px;
-  right: 0;
-  margin-left: 5px;
-  width: 0;
-  height: 0;
-  line-height: 0;
-  font-size: 0;
-  overflow: hidden;
-  border-width: 5px;
-  cursor: pointer;
-  border-style: solid dashed dashed dashed;
-  border-color: #9a9a9b transparent transparent transparent;
-  border-bottom: none;
-  transition: transform .1s ease-in 0s;
-  -webkit-transition: -webkit-transform .1s ease-in 0s;
-}
+  vertical-align: top; }
+  .header-top-con span.special {
+    color: #fff;
+    position: relative;
+    z-index: 10;
+    display: inline-block;
+    *display: inline;
+    *zoom: 1; }
+  .header-top-con span .expand-title {
+    padding: 1px 20px 1px 0; }
+  .header-top-con span b {
+    position: absolute;
+    z-index: 1000;
+    top: 14px;
+    right: 0;
+    margin-left: 5px;
+    width: 0;
+    height: 0;
+    line-height: 0;
+    font-size: 0;
+    overflow: hidden;
+    border-width: 5px;
+    cursor: pointer;
+    border-style: solid dashed dashed dashed;
+    border-color: #7e858f transparent transparent transparent;
+    border-bottom: none;
+    transition: transform .1s ease-in 0s;
+    -webkit-transition: -webkit-transform .1s ease-in 0s; }
 .header-top-con span:hover b {
   transform: rotate(180deg);
-  -webkit-transform: rotate(180deg);
-}
+  -webkit-transform: rotate(180deg); }
 .header-top-con .personal {
   position: absolute;
   z-index: 9999;
   top: 30px;
   right: 0;
-  border: 1px solid #eee;
+  border: 1px solid #ebedf2;
   background: #fff;
   width: 186px;
-  display: none;
-}
-.header-top-con .personal li {
-  float: none;
-  border-top: 1px solid #eee;
-  line-height: 35px;
-  padding: 0 20px;
-}
-.header-top-con .personal li a {
-  border-right: none;
-  color: #4d4d4d;
-  display: inline-block;
-  *display: inline;
-  *zoom: 1;
-}
-.header-top-con .personal li:hover {
-  background: #fafafa;
-}
+  display: none; }
+  .header-top-con .personal li {
+    float: none;
+    border-top: 1px solid #ebedf2;
+    line-height: 35px;
+    padding: 0 20px; }
+    .header-top-con .personal li a {
+      border-right: none;
+      color: #4d4d4d;
+      display: inline-block;
+      *display: inline;
+      *zoom: 1; }
+    .header-top-con .personal li:hover {
+      background: #fafafa; }
 .header-top-con .personal-con {
-  padding: 15px 20px;
-}
-.header-top-con .personal-con span {
-  padding: 0;
-  display: inline-block;
-  *display: inline;
-  *zoom: 1;
-  vertical-align: top;
-  color: #4d4d4d;
-}
-.header-top-con .personal-con span.face {
-  border-radius: 50%;
-}
-.header-top-con .personal-con span.txt {
-  font-size: 12px;
-  line-height: 20px;
-  margin-left: 5px;
-}
-.header-top-con .personal-con span.txt .nickname {
-  margin-bottom: 5px;
-}
-.header-top-con .personal-con span strong {
-  font-size: 16px;
-  color: #ff6700;
-}
+  padding: 15px 20px; }
+  .header-top-con .personal-con span {
+    padding: 0;
+    display: inline-block;
+    *display: inline;
+    *zoom: 1;
+    vertical-align: top;
+    color: #4d4d4d; }
+    .header-top-con .personal-con span.face {
+      border-radius: 50%; }
+    .header-top-con .personal-con span.txt {
+      font-size: 12px;
+      line-height: 20px;
+      margin-left: 5px; }
+      .header-top-con .personal-con span.txt .nickname {
+        margin-bottom: 5px; }
+    .header-top-con .personal-con span strong {
+      font-size: 16px;
+      color: #ff6700; }
 
 .header-nav {
   background: #fff;
   height: 80px;
-  line-height: 80px;
-}
-.header-nav span {
-  color: #f5eeeb;
-  padding: 0 15px;
-}
-.header-nav img {
-  vertical-align: middle;
-}
-.header-nav .logo {
-  margin-right: 80px;
-}
-.header-nav .logo a {
-  padding-right: 20px;
-}
-.header-nav .logo span {
-  height: 28px;
-  line-height: 28px;
-  border-left: 1px solid #ddd;
-  vertical-align: middle;
-  display: inline-block;
-  *display: inline;
-  *zoom: 1;
-}
-.header-nav .nav {
-  font-size: 0;
-  height: 80px;
-  overflow: hidden;
-  position: relative;
-  z-index: 2;
-}
-.header-nav .nav .border {
-  position: absolute;
-  z-index: 1000;
-  left: 0;
-  bottom: 0;
-  height: 6px;
-  width: 115px;
-  background: #ff6700;
-  display: none;
-}
-.header-nav .nav a {
-  width: 115px;
-  text-align: center;
-  font-size: 16px;
-  color: #404040;
-  display: inline-block;
-  *display: inline;
-  *zoom: 1;
-  overflow: hidden;
-}
-.header-nav .nav a:hover, .header-nav .nav a.active {
-  color: #ff6700;
-}
-.header-nav .login-btn a {
-  margin-left: 5px;
-  padding: 5px 10px;
-  color: #88878e;
-  border: 1px solid #dedfe3;
-  border-radius: 3px;
-}
-.header-nav .login-btn a:hover {
-  color: #fff;
-  background: #ff6700;
-  border: 1px solid #ff6700;
-  transition: all 0.1s;
-  -moz-transition: all 0.1s;
-  -webkit-transition: all 0.1s;
-  -o-transition: all 0.1s;
-}
+  line-height: 80px; }
+  .header-nav span {
+    color: #f5eeeb;
+    padding: 0 15px; }
+  .header-nav img {
+    vertical-align: middle; }
+  .header-nav .logo {
+    margin-right: 80px; }
+    .header-nav .logo a {
+      padding-right: 20px; }
+    .header-nav .logo span {
+      height: 28px;
+      line-height: 28px;
+      border-left: 1px solid #ddd;
+      vertical-align: middle;
+      display: inline-block;
+      *display: inline;
+      *zoom: 1; }
+  .header-nav .nav {
+    font-size: 0;
+    height: 80px;
+    overflow: hidden;
+    position: relative;
+    z-index: 2; }
+    .header-nav .nav .border {
+      position: absolute;
+      z-index: 1000;
+      left: 0;
+      bottom: 0;
+      height: 6px;
+      width: 115px;
+      background: #ff6700;
+      display: none; }
+    .header-nav .nav a {
+      width: 115px;
+      text-align: center;
+      font-size: 16px;
+      color: #404040;
+      display: inline-block;
+      *display: inline;
+      *zoom: 1;
+      overflow: hidden; }
+      .header-nav .nav a:hover, .header-nav .nav a.active {
+        color: #ff6700; }
+  .header-nav .login-btn a {
+    margin-left: 5px;
+    padding: 5px 10px;
+    color: #88878e;
+    border: 1px solid #dedfe3;
+    border-radius: 3px; }
+    .header-nav .login-btn a:hover {
+      color: #fff;
+      background: #ff6700;
+      border: 1px solid #ff6700;
+      transition: all 0.1s;
+      -moz-transition: all 0.1s;
+      -webkit-transition: all 0.1s;
+      -o-transition: all 0.1s; }
 
 .main-con-shopDetail {
-  padding: 5px 0;
-}
-.main-con-shopDetail h2 {
-  line-height: 35px;
-  color: #333;
-  font-size: 14px;
-  font-weight: bold;
-  border-bottom: 2px solid #ededed;
-}
-.main-con-shopDetail h2 span {
-  padding-bottom: 8px;
-  border-bottom: 2px solid #d4d4d4;
-}
-.main-con-shopDetail table {
-  margin-top: 20px;
-  width: 100%;
-}
-.main-con-shopDetail th, .main-con-shopDetail td {
-  padding-left: 10px;
-  line-height: 30px;
-  text-align: left;
-  border: 1px solid #e7e7e7;
-}
-.main-con-shopDetail th {
-  background: #f7f7f7;
-}
+  padding: 5px 0; }
+  .main-con-shopDetail h2 {
+    line-height: 35px;
+    color: #333;
+    font-size: 14px;
+    font-weight: bold;
+    border-bottom: 2px solid #ededed; }
+    .main-con-shopDetail h2 span {
+      padding-bottom: 8px;
+      border-bottom: 2px solid #d4d4d4; }
+  .main-con-shopDetail table {
+    margin-top: 20px;
+    width: 100%; }
+  .main-con-shopDetail th, .main-con-shopDetail td {
+    padding-left: 10px;
+    line-height: 30px;
+    text-align: left;
+    border: 1px solid #e7e7e7; }
+  .main-con-shopDetail th {
+    background: #f7f7f7; }
 
 .main-con-left {
   float: left;
-  width: 718px;
-}
-.main-con-left > div {
-  padding: 10px 25px 20px;
-}
+  width: 718px; }
+  .main-con-left > div {
+    padding: 10px 25px 20px; }
 
 .main-con-right {
   float: right;
-  width: 268px;
-}
+  width: 268px; }
 
 .main-con-shop span {
   display: inline-block;
   *display: inline;
-  *zoom: 1;
-}
-.main-con-shop span.text {
-  margin-left: 30px;
-  width: 450px;
-}
+  *zoom: 1; }
+  .main-con-shop span.text {
+    margin-left: 30px;
+    width: 450px; }
 .main-con-shop .img {
   width: 178px;
   height: 88px;
@@ -392,138 +323,113 @@ body {
   border: 1px solid #f2f2f2;
   display: table-cell;
   vertical-align: middle;
-  *display: inline-block;
-}
+  *display: inline-block; }
 .main-con-shop b {
-  color: #ff6700;
-}
+  color: #ff6700; }
 .main-con-shop .btn {
-  margin-top: 10px;
-}
-.main-con-shop .btn span {
-  width: 180px;
-  text-align: center;
-  height: 45px;
-  line-height: 45px;
-  font-size: 14px;
-  cursor: pointer;
-  color: #fff;
-  background: #ff6700;
-  border: 1px solid #ff6700;
-  border-radius: 3px;
-  cursor: pointer;
-  transition: all 0.4s;
-  -moz-transition: all 0.4s;
-  -webkit-transition: all 0.4s;
-  -o-transition: all 0.4s;
-}
-.main-con-shop .btn span:hover {
-  background: #f25807;
-  border: 1px solid #f25807;
-}
+  margin-top: 10px; }
+  .main-con-shop .btn span {
+    width: 180px;
+    text-align: center;
+    height: 45px;
+    line-height: 45px;
+    font-size: 14px;
+    cursor: pointer;
+    color: #fff;
+    background: #ff6700;
+    border: 1px solid #ff6700;
+    border-radius: 3px;
+    cursor: pointer;
+    transition: all 0.4s;
+    -moz-transition: all 0.4s;
+    -webkit-transition: all 0.4s;
+    -o-transition: all 0.4s; }
+    .main-con-shop .btn span:hover {
+      background: #f25807;
+      border: 1px solid #f25807; }
 .main-con-shop h1 {
   font-size: 24px;
-  line-height: 55px;
-}
+  line-height: 55px; }
 .main-con-shop p {
-  line-height: 22px;
-}
+  line-height: 22px; }
 .main-con-shop .prompts {
   margin-top: 10px;
   line-height: 35px;
-  border-top: 1px solid #f2f2f2;
-}
+  border-top: 1px solid #f2f2f2; }
 
 .main-con-flow .con {
-  margin-top: 30px;
-}
+  margin-top: 30px; }
 .main-con-flow .step {
   float: left;
   width: 33.3333%;
   background: url(../img/advertisement/arrow.png) no-repeat right;
-  text-align: center;
-}
-.main-con-flow .step p {
-  line-height: 45px;
-}
-.main-con-flow .step.last {
-  background: none;
-}
+  text-align: center; }
+  .main-con-flow .step p {
+    line-height: 45px; }
+  .main-con-flow .step.last {
+    background: none; }
 
 .shop-recomend h2 {
   margin-top: 5px;
-  font-size: 14px;
-}
+  font-size: 14px; }
 
 .similar-shops {
   margin-left: -1px;
-  margin-bottom: -1px;
-}
-.similar-shops a {
-  position: relative;
-  z-index: 1;
-  width: 133px;
-  height: 100px;
-  padding-bottom: 30px;
-  border-left: 1px solid #eee;
-  border-bottom: 1px solid #eee;
-  text-align: center;
-  display: table-cell;
-  vertical-align: middle;
-  *width: 132px;
-  *padding: 35px 0 0;
-  *display: inline-block;
-}
-.similar-shops a > div {
-  position: absolute;
-  z-index: 100;
-  left: 0;
-  right: 0;
-  bottom: 20px;
-}
-.similar-shops b {
-  line-height: 35px;
-  color: #ff6700;
-}
+  margin-bottom: -1px; }
+  .similar-shops a {
+    position: relative;
+    z-index: 1;
+    width: 133px;
+    height: 100px;
+    padding-bottom: 30px;
+    border-left: 1px solid #eee;
+    border-bottom: 1px solid #eee;
+    text-align: center;
+    display: table-cell;
+    vertical-align: middle;
+    *width: 132px;
+    *padding: 35px 0 0;
+    *display: inline-block; }
+    .similar-shops a > div {
+      position: absolute;
+      z-index: 100;
+      left: 0;
+      right: 0;
+      bottom: 20px; }
+  .similar-shops b {
+    line-height: 35px;
+    color: #ff6700; }
 
 .footer {
   margin-top: 50px;
-  border-top: 3px solid #bebebe;
+  border-top: 3px solid #d6d9df;
   padding: 30px 0;
   line-height: 24px;
-  background: #f8f8f8;
-  color: #535353;
-}
-.footer .footer-nav-group {
-  float: left;
-  margin-right: 80px;
-}
-.footer .footer-nav-group span {
-  color: #000;
-  font-size: 14px;
-  font-weight: bold;
-  padding: 8px 0;
-  display: inline-block;
-}
-.footer .footer-nav-group li span {
-  color: inherit;
-  font-size: 12px;
-  font-weight: normal;
-  padding: 0;
-}
-.footer .special {
-  margin-top: 16px;
-}
-.footer .special .img-link img {
-  margin-left: 2px;
-  margin-top: 3px;
-  display: inline-block;
-}
-.footer .copyright {
-  text-align: center;
-  margin-top: 20px;
-}
-.footer .copyright p {
-  line-height: 30px;
-  color: #989898;
-}
+  background: #edeff2;
+  color: #535353; }
+  .footer .footer-nav-group {
+    float: left;
+    margin-right: 80px; }
+    .footer .footer-nav-group span {
+      color: #000;
+      font-size: 14px;
+      font-weight: bold;
+      padding: 8px 0;
+      display: inline-block; }
+    .footer .footer-nav-group li span {
+      color: inherit;
+      font-size: 12px;
+      font-weight: normal;
+      padding: 0; }
+  .footer .special {
+    margin-top: 16px; }
+    .footer .special .img-link img {
+      margin-left: 2px;
+      margin-top: 3px;
+      display: inline-block; }
+  .footer .copyright {
+    text-align: center;
+    margin-top: 20px; }
+    .footer .copyright p {
+      line-height: 30px;
+      color: #989898; }
