--- a/web/sass/component/help.scss
+++ b/web/sass/component/help.scss
@@ -4,7 +4,7 @@
 .main-help-banner{
 	height: 104px;
 	margin-bottom: 20px;
-	background: #677484 url(../img/common/seamless-noise-bg.png) repeat;
+	background: #3a4858 url(../img/common/seamless-noise-bg.png) repeat;
 	@include box-shadow(0px 1px 5px #2a3033 inset);
 	.text{
 		background: url(../img/help/bannerBg.png) no-repeat center;
