--- a/web/sass/index.scss
+++ b/web/sass/index.scss
@@ -176,7 +176,41 @@ $main-ad-color: #eb7020;
 			top: 144px;
 		}
 	}
-	
-
+}
+.main-con-action{
+	text-align: center;
+	background: #fff;
+	height: 200px;
+	h1{
+	    font-size: 24px;
+	    font-weight: bold;
+	    color: #323232;
+	    line-height: 46px;
+	    margin-top: 15px;
+	}
+	p{
+		color: #929293;
+	    font-size: 16px;
+	    line-height: 60px;
+	}
+	.button{
+		color: #fff;
+	    background: #ff6700;
+	    border: 1px solid #ff6700;
+	    border-radius: 5px;
+	    cursor: pointer;
+	    @include transition(all, 0.4s);
+	    padding: 16px 35px;
+	    display: inline-block;
+	    &:hover, &:active{
+	    	background:#f25807;
+        	border: 0;
+        	padding: 20px 40px;
+ 			font-size: 16px;
+	    }
+	}
+}
+.footer{
+	margin-top: 0!important;
 }
 @import "layout/footer";
