--- a/web/sass/layout/footer.scss
+++ b/web/sass/layout/footer.scss
@@ -1,14 +1,14 @@
 @charset "UTF-8";
 
 @import "global";
-$footer-bg-color: #f8f8f8;
+$footer-bg-color: #edeff2;
 $footer-title-font-color: #000;
 $footer-con-font-color: #535353;
 $footer-copyright-font-color: #989898;
 
 .footer{
 	margin-top: 50px;
-	border-top: 3px solid #bebebe;
+	border-top: 3px solid #d6d9df;
 	padding: 30px 0;
 	line-height: 24px;
 	background: $footer-bg-color;
