--- a/web/sass/layout/header.scss
+++ b/web/sass/layout/header.scss
@@ -23,7 +23,7 @@ $header-height: 110px;
 		height: 80px;
 	}
 }
-$top-font-color: #9a9a9b;
+$top-font-color: #7e858f;
 $top-bg-color: #36363c;
 .header-top{
 	background: $top-bg-color;
