--- a/src/Wenwen/FrontendBundle/Resources/views/Advertisement/shopDetail.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/Advertisement/shopDetail.html.twig
@@ -3,6 +3,7 @@
 
 {% block stylesheet %}
 <link href="{{ asset('css/shopDetail.css') }} " rel="stylesheet" type="text/css">
+<link href="{{ asset('css/component/crumbs.css') }} " rel="stylesheet" type="text/css">
 {% endblock %}
 
 {% block javascript %}
@@ -17,6 +18,9 @@
 	<div class="main-con-shopDetail w1000">
 		<div class="main-con-left">
 			<div class="main-con-shop">
+				<div class="crumbs">
+				     <a href="{{ path('wenwen_frontend_home_home') }}" class="home"></a>&nbsp;&nbsp;<em>&gt;</em>&nbsp;&nbsp;<a href="{{ path('wenwen_frontend_advertisement_index') }}">体验广告</a>&nbsp;&nbsp;<em>&gt;</em>&nbsp;&nbsp;<a href="{{ path('wenwen_frontend_advertisement_shoplist') }}">商家列表</a>&nbsp;&nbsp;<em>&gt;</em>&nbsp;&nbsp;返利详情
+				</div>
 				<span>
 					<div class="img"><img src="{{ asset('img/temp/yl.jpg') }}" alt=""><div>最高返<b>7%</b></div></div>
 					<div class="btn"><span>去购物，赚积分</span></div>
