--- a/web/css/layout/header.css
+++ b/web/css/layout/header.css
@@ -29,12 +29,12 @@
 
 .header-top {
   background: #36363c;
-  color: #7e858f;
+  color: #828285;
   height: 30px;
   line-height: 30px;
   border-bottom: 1px solid #bcbdc2; }
   .header-top a {
-    color: #7e858f;
+    color: #828285;
     font-size: 12px; }
     .header-top a:hover {
       color: #fff; }
@@ -108,7 +108,7 @@
     border-width: 5px;
     cursor: pointer;
     border-style: solid dashed dashed dashed;
-    border-color: #7e858f transparent transparent transparent;
+    border-color: #828285 transparent transparent transparent;
     border-bottom: none;
     transition: transform .1s ease-in 0s;
     -webkit-transition: -webkit-transform .1s ease-in 0s; }
